spec/e2e/variable/undefined_global.lit
println notDefined  # error: [line 1] Runtime error: Undefined variable 'notDefined'.
